--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -1,20 +1,20 @@
 name: Eleventy Build
-on: [push]
+on: 
+  push:
+    paths-ignore:
+      - README.md
 
 jobs:
-  build_deploy:
-    runs-on: ubuntu-18.04
+  build-deploy:
+    name: Eleventy Build
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - name: Git Checkout
+        uses: actions/checkout@v2
       - name: Build
-        uses: TartanLlama/actions-eleventy@master
-        with:
-          args: --output _site
-          install_dependencies: true
+        uses: TartanLlama/actions-eleventy@v1.1
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          publish_dir: _site 
-          publish_branch: gh-pages
+          publish_dir: ./_site 
           github_token: ${{ secrets.GITHUB_TOKEN }}
-            
