--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           install_dependencies: true
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@latest
+        uses: peaceiris/actions-gh-pages@v3.9.3
         with:
           publish_dir: ./_site 
           github_token: ${{ secrets.GITHUB_TOKEN }}
