--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch:eleventy": "eleventy --serve --formats=html,md,jpg,jpeg,png",
     "build:eleventy": "npx eleventy",
     "start": "npm-run-all build:sass --parallel watch:*",
-    "build": "npm-run-all sass-build:*"
+    "build": "npm-run-all build:*"
   },
   "keywords": [],
   "author": "",
