--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Build
         uses: TartanLlama/actions-eleventy@master
         with:
+          args: --formats=html,md,jpg,jpeg,png
           install_dependencies: true
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.9.3
