--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch:sass": "sass --watch src/assets/sass:_site/assets/css",
     "build:sass": "sass src/assets/sass:src/assets/css",
-    "watch:eleventy": "eleventy --serve --formats=html,md,jpg,jpeg,png",
+    "watch:eleventy": "eleventy --serve --formats=html,md,jpg,jpeg,png,css",
     "build:eleventy": "npx eleventy",
     "start": "npm-run-all build:sass --parallel watch:*",
     "build": "npm-run-all build:*"
