--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "sass --watch src/assets/sass:_site/assets/css",
+    "watch:sass": "sass --watch src/assets/sass:src/assets/css",
     "build:sass": "sass src/assets/sass:src/assets/css",
     "watch:eleventy": "eleventy --serve --formats=html,md,jpg,jpeg,png,css",
     "build:eleventy": "npx eleventy",
