--- a/.github/workflows/eleventy_build.yml
+++ b/.github/workflows/eleventy_build.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 18
       - run: npm ci
-      - run: npm start
+      - run: npm run ep-build-all
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3.9.3
         with:
